[metadata]
name = hypro
version = 0.9.9
author = Nanfeng Liu
author_email = nliu58@wisc.edu
description = Tools for processing raw hyperspectral data from pushbroom sensors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EnSpec/hypro
project_urls =
    Source Code = https://github.com/EnSpec/hypro
    Bug Tracker = https://github.com/EnSpec/hypro/issues
license = GNU GPLv3
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.6
include_package_data = True
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
hypro = data/solar/*
